<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Sign_up_client"
    android:layout_width="match_parent"
    android:layout_height="700dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background_fragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_fragment_sign_up"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:contentPadding="30dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_form_sign_up">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CADASTRO"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textEditName"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                android:hint="@string/name"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditName"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEditCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditEmail"
                android:hint="@string/cep"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/cep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEditStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditCep"
                app:layout_constraintRight_toLeftOf="@id/textNeighborhood"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/street"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textNeighborhood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditCep"
                app:layout_constraintLeft_toRightOf="@id/textEditStreet"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/neighborhood"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/neighborhood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEditCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditStreet"
                app:layout_constraintRight_toLeftOf="@id/textState"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/city"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textEditStreet"
                app:layout_constraintLeft_toRightOf="@id/textEditCity"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/state"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="25dp"
                >

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textImeMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSign"
                android:layout_width="200dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/textState"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/button_form_sign_up"
                android:text="Cadastrar"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/primaryText"
                android:layout_marginTop="50dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

</ScrollView>